--- a/style.css
+++ b/style.css
@@ -81,18 +81,7 @@ footer {
     margin-top: 30px;
 }
 
-@media screen and (min-width:640px) {
-    nav, footer {
-        background-color: #668;
-    }
-    .content {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: flex-start;
-    }
-}
+
 
 /* aboutページのCSS */
 
@@ -106,4 +95,57 @@ footer {
 
 .company-table th {
     text-align: right;
+}
+
+/* contactページのCSS */
+
+.form-content{
+    width: 90%;
+}
+
+.form-content h3{
+    text-align: center;
+}
+
+label{
+    display: block;
+    margin-top: 20px;
+}
+
+input[type="text"]{
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+textarea{
+    width: 100%;
+    padding: 10px;
+    resize: none;
+    box-sizing: border-box;
+}
+
+button{
+    margin-top: 20px;
+    padding: 10px 30px;
+}
+
+
+/* PC向けCSS */
+@media screen and (min-width:640px) {
+    nav, footer {
+        background-color: #668;
+    }
+
+    .content {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+
+    .form-content{
+        width: 60%;
+    }
 }
